<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="state"
            type="net.kosev.mvidemo.ui.trade.TradeState.Success" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/setting_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="top|end"
            android:layout_margin="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/settings"
            android:tint="@color/black"
            app:srcCompat="@drawable/ic_settings_24dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <TextView
                android:id="@+id/crypto_balance_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:maxLines="1"
                android:text="@{state.formattedCryptoBalance}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="BTC 1.34535678" />

            <TextView
                android:id="@+id/fiat_balance_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:maxLines="1"
                android:text="@{state.formattedFiatBalance}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crypto_balance_label"
                tools:text="EUR 34660.00" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amount_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                android:hint="@string/spend_euro"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fiat_balance_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/rate_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:text="@{state.formattedExchangeRate}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:drawableStartCompat="@drawable/ic_conversion_24dp"
                app:drawableTint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/amount_field"
                tools:text="EUR 1 = BTC 0.0001" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/result_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:enabled="false"
                android:hint="@string/receive_bitcoin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rate_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{state.formattedResult}"
                    android:textColor="?attr/colorOnSurface" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:enabled="@{state.isBuyingAllowed}"
                android:text="@string/buy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/result_field" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/loading_crypto_balance"
                    android:layout_width="200dp"
                    android:layout_height="34dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/back_loading"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/loading_fiat_balance"
                    android:layout_width="120dp"
                    android:layout_height="26dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/back_loading"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loading_crypto_balance" />

                <View
                    android:id="@+id/loading_amount_field"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/back_loading"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loading_fiat_balance" />

                <View
                    android:id="@+id/loading_rate_label"
                    android:layout_width="180dp"
                    android:layout_height="26dp"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/back_loading"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loading_amount_field" />

                <View
                    android:id="@+id/loading_result_field"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/back_loading"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loading_rate_label" />

                <View
                    android:id="@+id/loading_buy_button"
                    android:layout_width="124dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="36dp"
                    android:background="@drawable/back_loading"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loading_result_field" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginHorizontal="64dp"
            android:layout_marginTop="200dp"
            android:gravity="center"
            android:text="@string/error_loading_balances"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textColor="#f00" />

    </FrameLayout>

</layout>
